--- a/styles/main.scss
+++ b/styles/main.scss
@@ -52,6 +52,10 @@ body {
     
     justify-content: center;
 
+    &__alfabet {
+        background-color: rgba(0, 0, 0, 0.678);
+    }
+
     .text {
         position: relative;
         
