--- a/styles/main.scss
+++ b/styles/main.scss
@@ -13,6 +13,8 @@ body {
         width: 100%;
         border: 2px solid rgb(48, 57, 70);
         border-radius: 3px;
+
+        font-size: 24px;
     }
 
     .wrapper {
